[gd_scene load_steps=8 format=2]

[ext_resource path="res://models/Daniel/Enemy.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.843137, 0.227451, 0.227451, 1 )

[sub_resource type="SphereMesh" id=2]
material = SubResource( 1 )
radius = 0.5
height = 1.75

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.615686, 1, 0.980392, 1 )

[sub_resource type="SphereMesh" id=4]
material = SubResource( 3 )
radius = 0.25
height = 0.5

[sub_resource type="CapsuleShape" id=5]
margin = 0.001
radius = 0.6
height = 0.6

[sub_resource type="SphereShape" id=6]
radius = 25.0

[node name="Enemy" type="KinematicBody" groups=["BasePlayer", "Enemy"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.125, 0 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Eye" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, -0.25 )
mesh = SubResource( 4 )
material/0 = null

[node name="Pivot" type="Spatial" parent="MeshInstance/Eye"]

[node name="BulletPosition" type="Position3D" parent="MeshInstance/Eye/Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.294808 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.8, 0 )
shape = SubResource( 5 )

[node name="SightRange" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="SightRange"]
shape = SubResource( 6 )

[node name="Eyes" type="Spatial" parent="."]

[node name="ShootTimer" type="Timer" parent="."]

[node name="MovementChange" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="SightRange" to="." method="_on_SightRange_body_entered"]
[connection signal="body_exited" from="SightRange" to="." method="_on_SightRange_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="MovementChange" to="." method="_on_MovementChange_timeout"]
